--- a/templates/PWIDS/activity_signup.html
+++ b/templates/PWIDS/activity_signup.html
@@ -4,7 +4,12 @@
 {% block content %}
 <div class="container mt-4">
     {% if activity %}
-    <h1>Sign Up for {{ activity.get_name() }}</h1>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h1>Sign Up for {{ activity.get_name() }}</h1>
+        <a href="{{ url_for('participant_activities') }}" class="btn btn-secondary">
+            <i class="fas fa-arrow-left"></i> Back to Activities
+        </a>
+    </div>
     <form method="POST" action="{{ url_for('activity_signup', activity_id=activity.get_activity_id()) }}">
         <div class="form-group">
             {{ form.name.label }}
