--- a/templates/includes/public_navbar.html
+++ b/templates/includes/public_navbar.html
@@ -150,7 +150,7 @@
             </li>
             {% if current_page == 'public_donations' %}
                 <li class="nav-item ml-3 mr-2">
-                    <a href="{{ url_for('transaction_cart') }}" class="cart btn">
+                    <a class="cart btn"href="{{ url_for('transaction_cart') }}">
                         <i class="bi bi-cart"></i>
                         <div class="cart-amount">{{ session.get('cart')|length if session.get('cart') else 0 }}</div>
                     </a>
