--- a/templates/Staff/Staff_base.html
+++ b/templates/Staff/Staff_base.html
@@ -21,6 +21,12 @@
         {% endblock %}
     </div>
 
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        <div class="container">
+            <p class="mb-0">&copy; 2025 SGEnable Staff Portal. All rights reserved.</p>
+        </div>
+    </footer>
+
     {% block scripts %}
     <!-- jQuery 3.5.1, Popper 1.16.1, Bootstrap 4.5.2 JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
