--- a/templates/Public/base.html
+++ b/templates/Public/base.html
@@ -32,6 +32,29 @@
         {% block content %}
         {% endblock %}
     </div>
+    
+
+    <footer class="py-3 mt-5">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item">
+                <a href="/" class="nav-link px-2 text-muted">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="/about" class="nav-link px-2 text-muted">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a href="/activities" class="nav-link px-2 text-muted">Activities</a>
+            </li>
+            <li class="nav-item">
+                <a href="/contact/enquiries" class="nav-link px-2 text-muted">Contact Us</a>
+            </li>
+            <li class="nav-item">
+                <a href="/donations" class="nav-link px-2 text-muted">Donation Gifts</a>
+            </li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2025 SGEnable. All Rights Reserved.</p>
+    </footer>
+    
 
     {% block scripts %}
     <!-- jQuery 3.5.1, Popper 1.16.1, Bootstrap 4.5.2 JavaScript -->
