--- a/templates/PWIDS/base.html
+++ b/templates/PWIDS/base.html
@@ -21,6 +21,26 @@
         {% endblock %}
     </div>
 
+
+    <footer class="py-3 mt-5">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item">
+                <a href="/participants/home" class="nav-link px-2 text-muted">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="/participants/my-activities" class="nav-link px-3 text-muted">My Activities</a>
+            </li>
+            <li class="nav-item">
+                <a href="/participants/outlets" class="nav-link px-3 text-muted">Our Outlets & Map</a>
+            </li>
+            <li class="nav-item">
+                <a href="/participants/help" class="nav-link px-3 text-muted">Help</a>
+            </li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2025 SGEnable. All Rights Reserved.</p>
+    </footer>
+
+    
     {% block scripts %}
     <!-- jQuery 3.5.1, Popper 1.16.1, Bootstrap 4.5.2 JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
