--- a/templates/Public/donations.html
+++ b/templates/Public/donations.html
@@ -22,10 +22,11 @@
                     </div>
                 </div>
                 <div class="card-footer d-flex justify-content-between bg-light">
-                    <a href="{{ url_for('add_to_cart', product_id=product.get_product_id()) }}"
-                        class="btn btn-primary btn-sm">
-                        Add to Cart
-                    </a>
+                    <form action="{{ url_for('add_to_cart', product_id=product.get_product_id()) }}" method="POST">
+                        <input type="hidden" name="name" value="{{ product.get_product() }}">
+                        <input type="hidden" name="price" value="{{ product.get_price() }}">
+                        <button type="submit" class="btn btn-primary btn-sm">Add to Cart</button>
+                    </form>
                 </div>
             </div>
         </div>
