--- a/templates/Staff/Staff_base.html
+++ b/templates/Staff/Staff_base.html
@@ -23,7 +23,7 @@
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
         <div class="container">
-            <p class="mb-0">&copy; 2025 SGEnable Staff Portal. All rights reserved.</p>
+            <p class="mb-0">&copy; 2025 SGEnable. All rights reserved.</p>
         </div>
     </footer>
 
