Finished Transaction Management

--- a/templates/Public/transaction_cart.html
+++ b/templates/Public/transaction_cart.html
@@ -37,7 +37,7 @@
 
         <!-- Checkout button -->
         <div class="text-right mt-3">
-            <form action="{{ url_for('checkout') }}" method="post">
+            <form action="{{ url_for('create_transaction') }}" method="POST">
                 <button type="submit" class="btn btn-success btn-lg">Proceed to Checkout</button>
             </form>
         </div>
