--- a/templates/Public/transaction_completion.html
+++ b/templates/Public/transaction_completion.html
@@ -1,6 +1,5 @@
-{% extends "Staff/Staff_base.html" %}
+{% extends "Public/base.html" %}
 {% block title %}SGEnable - Create Product Listing{% endblock %}
-Transaction Complete
 {% block content %}
-{% from "includes/_formHelper.html" import render_field %}
+Transaction Complete
 {% endblock %}
