--- a/templates/includes/staff_navbar.html
+++ b/templates/includes/staff_navbar.html
@@ -101,7 +101,7 @@
                     <a class="dropdown-item {% if current_page == 'product_management' %}active{% endif %}"
                        href="{{ url_for('manage_product') }}">Products</a>
                     <a class="dropdown-item {% if current_page == 'transaction_management' %}active{% endif %}"
-                       href="{{ url_for('enquiry_public') }}">Transactions</a>
+                       href="{{ url_for('manage_transactions') }}">Transactions</a>
                 </div>
             </li>
         </ul>
