--- a/templates/Staff/activity_participants.html
+++ b/templates/Staff/activity_participants.html
@@ -2,7 +2,7 @@
 {% block title %}SGEnable - Activity Management (Participants){% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h1>Activity Management - Participants</h1>
         <a href="{{ url_for('create_participant_activity') }}" class="btn btn-success">
