--- a/templates/Staff/account_update.html
+++ b/templates/Staff/account_update.html
@@ -3,9 +3,8 @@
 
 {% block content %}
 {% from "includes/_formHelper.html" import render_field %}
-
-    <h1">Update Account</h1>
-
+<div class="mt-4">
+    <h1>Update Account</h1>
     <form method="POST" action="">
         <div class="form-group">
             {{ render_field(form.first_name, class="form-control") }}
@@ -24,9 +23,8 @@
                 {{ render_field(form.email, class="form-control") }}
             </div>
         </div>
-        <input type="submit" value="Submit" class="btn btn-primary"/>
+        <input type="submit" value="Update" class="btn btn-primary"/>
         <a href="{{ url_for('manage_accounts') }}" class="btn btn-secondary ml-2">Cancel</a>
     </form>
+</div>
 {% endblock %}
-
-
