--- a/templates/Staff/activity_public_update.html
+++ b/templates/Staff/activity_public_update.html
@@ -25,11 +25,10 @@
                         {{ render_field(form.activity_end_datetime, class="form-control") }}
                     </div>
 
-                    <input type="submit" value="Submit" class="btn btn-primary"/>
+                    <input type="submit" value="Update" class="btn btn-primary"/>
                     <a href="{{ url_for('activity_public') }}" class="btn btn-secondary ml-2">Cancel</a>
                 </form>
             </div>
         </div>
     </div>
 {% endblock %}
-
