--- a/templates/Staff/account_create.html
+++ b/templates/Staff/account_create.html
@@ -25,7 +25,9 @@
                 {{ render_field(form.email, class="form-control") }}
             </div>
         </div>
-        <input type="submit" value="Create" class="btn btn-primary"/>
+        <button type="submit" class="btn btn-primary px-3">
+                <i class="fas fa-save"></i> Create
+        </button>
         <a href="{{ url_for('manage_accounts') }}" class="btn btn-secondary ml-2">Cancel</a>
     </form>
 </div>
