--- a/templates/Staff/activity_public_create.html
+++ b/templates/Staff/activity_public_create.html
@@ -25,11 +25,14 @@
                         {{ render_field(form.activity_end_datetime, class="form-control") }}
                     </div>
 
-                    <input type="submit" value="Create" class="btn btn-primary"/>
+                    <button type="submit" class="btn btn-primary px-3">
+                        <i class="fas fa-save"></i> Create
+                    </button>
                     <a href="{{ url_for('activity_public') }}" class="btn btn-secondary ml-2">Cancel</a>
                 </form>
             </div>
         </div>
     </div>
 {% endblock %}
+
 
