--- a/templates/Login_SignUp/login.html
+++ b/templates/Login_SignUp/login.html
@@ -36,7 +36,7 @@
 <body>
 <div class="container text-center">
     <h1 class="mb-0"><span style="color: white;">SG</span><span style="color: #7ed957;">Enable</span></h1>
-    <h6 class="text-white mb-4">Staff Login Portal</h6>
+    <h6 class="text-white mb-4">Participants Login Portal</h6>
 
 
     <div class="login-box mx-auto">
