Consistent title format

--- a/templates/Public/contact_locations.html
+++ b/templates/Public/contact_locations.html
@@ -1,5 +1,5 @@
 {% extends "Public/base.html" %}
-{% block title %}Our Outlets{% endblock %}
+{% block title %}SG Enable - Our Outlets{% endblock %}
 
 {% block head %}
 {{ super() }}
