--- a/templates/Staff/analytics.html
+++ b/templates/Staff/analytics.html
@@ -1,5 +1,5 @@
 {% extends "Staff/Staff_base.html" %}
-{% block title %}Analytics Dashboard{% endblock %}
+{% block title %}SGEnable - Analytics Dashboard{% endblock %}
 
 {% block content %}
 <!-- MAIN CONTAINER -->
