--- a/templates/Public/about.html
+++ b/templates/Public/about.html
@@ -1,4 +1,5 @@
 {% extends "Public/base.html" %}
+{% block title %}SG Enable - About Us{% endblock %}
 {% block content %}
 <div class="container my-5">
     <h1 class="text-center mb-5">About Us</h1>
