--- a/templates/Public/activities.html
+++ b/templates/Public/activities.html
@@ -1,4 +1,5 @@
 {% extends "Public/base.html" %}
+{% block title %}SG Enable - Activities{% endblock %}
 {% block content %}
 <div class="container mt-4">
     <div class="mt-3">
