--- a/templates/Public/contact_enquries.html
+++ b/templates/Public/contact_enquries.html
@@ -1,4 +1,5 @@
 {% extends "Public/base.html" %}
+{% block title %}SG Enable - Enquiries{% endblock %}
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/public.css') }}">
